--- a/install-packages.yaml
+++ b/install-packages.yaml
@@ -2,6 +2,7 @@
 - name: Init K3s cluster VMs
   hosts: localhost
   connection: local
+  gather_facts: false
   vars_files:
     - k3s-env.yaml
   tasks:
