--- a/k3s-env.yaml
+++ b/k3s-env.yaml
@@ -2,6 +2,7 @@
 host_snap_packages:
   - { name: multipass, classic: false }
   - { name: kubectl, classic: true }
+  - { name: helm, classic: true }
 
 k3s_version: v1.28.8+k3s1
 
